FEND-1182 [DropDown] bugfix list should be visible (#198)

--- a/styles/themes/light/components/DropDown/_dropdown.scss
+++ b/styles/themes/light/components/DropDown/_dropdown.scss
@@ -1,6 +1,7 @@
 .dropdown-wrapper {
   display: inline-block;
   position: relative;
+  overflow: visible; // fix IE11 <button/> overflow: hidden
 
   & > ul {
     background-color: $white;
